[package]
name = "pictochar"
version = "0.1.0"
edition = "2021"
authors = ["moveonwasd"]
about = "Simple CLI tool to draw ASCII art in the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
reqwest = { version = "0.11.23", features = ["blocking"] }